--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -48,6 +48,8 @@
             android:textColor="@color/text" />
     </LinearLayout>
     
+	<View android:background="@color/line_ruler_colour" android:layout_width="fill_parent" android:layout_height="1dip" />
+    
     <LinearLayout
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
@@ -69,6 +71,8 @@
             android:text="@string/home_compass_description"
             android:textColor="@color/text" />
     </LinearLayout>
+    
+    <View android:background="@color/line_ruler_colour" android:layout_width="fill_parent" android:layout_height="1dip" />
     
     <LinearLayout
         	android:layout_width="match_parent"
