--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,17 +3,21 @@
     <item
         android:id="@+id/action_az"
         android:orderInCategory="25"
-        android:title="@string/action_az" />
+        android:title="@string/action_az"
+        android:icon="@drawable/btn_az_dark" />
     <item
         android:id="@+id/action_favorite"
         android:orderInCategory="50"
-        android:title="@string/action_favorite" />
+        android:title="@string/action_favorite"
+        android:icon="@drawable/btn_favorite_dark" />
     <item
         android:id="@+id/action_relocate"
         android:orderInCategory="75"
-        android:title="@string/action_relocate" />
+        android:title="@string/action_relocate"
+        android:icon="@drawable/btn_relocate_dark" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings"
+        android:icon="@drawable/btn_settings_dark" />
 </menu>
