--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/action_settings"
         android:showAsAction="never"
-        android:icon="@drawable/btn_settings"
+        android:icon="@drawable/btn_settings_dark"
         android:title="@string/action_settings" />
 </menu>
