--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,4 +3,5 @@
 	<color name="background">#2E2E2E</color>
 	<color name="title_text">#9BA8C7</color>
 	<color name="text">#FFFFFF</color>
+	<color name="line_ruler_colour">#DEDEDE</color>
 </resources>
