--- a/res/layout/activity_map_favorite.xml
+++ b/res/layout/activity_map_favorite.xml
@@ -15,5 +15,24 @@
         android:scaleType="center"
         android:tileMode="disabled"
         android:src="@drawable/prototype_map_blank" />
+    
+    <LinearLayout
+        android:layout_width="@dimen/sidebar_width"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:background="@color/background" >
+         <EditText
+	        android:id="@+id/list_favorites_search"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="@string/search"
+	        android:ems="10" >
+    	</EditText>
+        <ListView
+		    android:id="@+id/list_favorites"
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    android:listSelector="@drawable/list_selector" /> 
+    </LinearLayout>
 
 </RelativeLayout>
