--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,5 +6,7 @@
     
     <dimen name="title_bottom_margin">36dp</dimen>
     <dimen name="home_icon_padding">20dp</dimen>
+    
+    <dimen name="sidebar_width">280dp</dimen>
 
 </resources>
