--- a/res/drawable/list_bg_hover.xml
+++ b/res/drawable/list_bg_hover.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
 	<gradient
-		android:startColor="#18d7e5"
-		android:centerColor="#16cedb"
-		android:endColor="#09adb9"
+		android:startColor="@color/list_select_gradient_top"
+		android:centerColor="@color/list_select_gradient_center"
+		android:endColor="@color/list_select_gradient_end"
 		android:angle="270" />
 </shape>
