--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,5 +9,7 @@
     
     <dimen name="sidebar_width">280dp</dimen>
     <dimen name="sidebar_border_width">2dp</dimen>
+    
+    <dimen name="relocate_height">150dp</dimen>
 
 </resources>
