--- a/res/layout/activity_map_favorite.xml
+++ b/res/layout/activity_map_favorite.xml
@@ -23,22 +23,46 @@
         android:orientation="vertical"
         android:background="@drawable/sidebar"
         android:textColor="@color/sidebar_txt" >
-         <EditText
-	        android:id="@+id/list_favorites_search"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:descendantFocusability="beforeDescendants"
-    		android:focusableInTouchMode="true"
-	        android:singleLine="true"
-	        android:hint="@string/search"
-	        android:ems="10" >
-    	</EditText>
-        <ListView
-		    android:id="@+id/list_favorites"
+		<LinearLayout
+		    android:id="@+id/list_favorites_search_bar"
 		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-		    android:textColor="@color/sidebar_txt"
-		    android:listSelector="@drawable/list_selector" /> 
+		    android:layout_height="wrap_content"
+		    android:padding="5dp" >
+			<EditText
+		        android:id="@+id/list_favorites_search"
+		        android:layout_weight="2"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:descendantFocusability="beforeDescendants"
+	    		android:focusableInTouchMode="true"
+		        android:singleLine="true"
+		        android:hint="@string/search"
+		        android:ems="10" >
+	    	</EditText>
+	    	<Button
+	    	    android:layout_weight="1"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:text="@string/btn_search" />
+		</LinearLayout>
+		
+		<LinearLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="25dp"
+		    android:focusable="true"
+		    android:clickable="true"
+		    android:background="@drawable/list_selector" >
+
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/network_eduroam"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		</LinearLayout>
+		
     </LinearLayout>
     
     <LinearLayout
