--- a/res/layout/activity_map_az.xml
+++ b/res/layout/activity_map_az.xml
@@ -15,5 +15,80 @@
         android:scaleType="center"
         android:tileMode="disabled"
         android:src="@drawable/prototype_map_blank" />
+    
+    <LinearLayout
+        android:id="@+id/sidebar_favorites"
+        android:layout_width="@dimen/sidebar_width"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:background="@drawable/sidebar"
+        android:textColor="@color/sidebar_txt" >
+		<LinearLayout
+		    android:id="@+id/list_favorites_search_bar"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="5dp" >
+			<EditText
+		        android:id="@+id/list_favorites_search"
+		        android:layout_weight="2"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:descendantFocusability="beforeDescendants"
+	    		android:focusableInTouchMode="true"
+		        android:singleLine="true"
+		        android:hint="@string/search"
+		        android:ems="10" >
+	    	</EditText>
+	    	<Button
+	    	    android:layout_weight="1"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:text="@string/btn_search" />
+		</LinearLayout>
+		
+		<LinearLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="25dp"
+		    android:focusable="true"
+		    android:clickable="true"
+		    android:background="@drawable/list_selector"
+		    android:onClick="loadHeatmap" >
+
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/network_eduroam"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		</LinearLayout>
+		
+		<LinearLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="25dp"
+		    android:focusable="true"
+		    android:clickable="true"
+		    android:background="@drawable/list_selector"
+		    android:onClick="loadHeatmap" >
+
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/network_wifi"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		</LinearLayout>
+		
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_toRightOf="@+id/sidebar_favorites"
+        android:layout_width="@dimen/sidebar_border_width"
+        android:layout_height="fill_parent"
+        android:background="@color/sidebar_border" >
+    </LinearLayout>
 
 </RelativeLayout>
