--- a/res/layout/activity_map_relocate.xml
+++ b/res/layout/activity_map_relocate.xml
@@ -21,7 +21,33 @@
         android:layout_width="fill_parent"
         android:layout_height="@dimen/relocate_height"
         android:layout_centerVertical="true"
+        android:orientation="vertical"
         android:background="@drawable/sidebar" >
+
+        <EditText
+            android:id="@+id/reloate_search"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:descendantFocusability="beforeDescendants"
+            android:ems="10"
+            android:focusableInTouchMode="true"
+            android:hint="@string/search"
+            android:singleLine="true" >
+	   	</EditText>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:text="@string/btn_search" />
+
     </LinearLayout>
     
     <LinearLayout
