Began updating to the new design.
- Began implementing new designs for map screens. Have modified the A -
Z and Favourites screens.
- Added pin to the map screen, that when pressed will take the user to
the WiFi strength screen.
- Added some new Icons, and changed some of the Styling.

--- a/res/drawable/sidebar.xml
+++ b/res/drawable/sidebar.xml
@@ -5,11 +5,11 @@
         android:width="@dimen/sidebar_border_width"
         android:color="@color/sidebar_border" /> -->
 	
-	<gradient
+	<!-- <gradient
 		android:startColor="#E3f1f1f2"
 		android:centerColor="#E3e7e7e8"
 		android:endColor="#E3cfcfcf"
-		android:angle="270" />
+		android:angle="270" /> -->
    
-	<!-- <solid android:color="@color/sidebar_bg" /> -->
+	<solid android:color="@color/sidebar_bg" />
 </shape>
