Did a lot of things.
- Started working on updated designs for Camera and Compass View.
- Modified Camera and Compass View so it goes to the A - Z screen first.
- Modified the Camera prototype image to create a mock-up display.
- Began some very early work on the Settings page for the Map View.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,4 +16,14 @@
 	<color name="list_select_gradient_top">#5A92CE</color>
 	<color name="list_select_gradient_center">#396DA5</color>
 	<color name="list_select_gradient_end">#396594</color>
+	
+	<string-array name="colours">
+	    <item>Blue</item>
+	    <item>Green</item>
+	    <item>Red</item>
+	    <item>Purple</item>
+	    <item>Orange</item>
+	    <item>Yellow</item>
+	    <item>Pink</item>
+	</string-array>
 </resources>
