--- a/res/layout/activity_camera_az.xml
+++ b/res/layout/activity_camera_az.xml
@@ -2,19 +2,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:textColor="@color/text"
-    tools:context=".CameraAZActivity" >
-
-    <ImageView
-        android:contentDescription="@string/prototype"
+    tools:context=".MapActivity" >
+    
+    <LinearLayout
+        android:id="@+id/sidebar_favorites"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:gravity="top"
-        android:scaleType="center"
-        android:tileMode="disabled"
-        android:src="@drawable/prototype_camera_blank" />
+        android:orientation="vertical"
+        android:background="@drawable/sidebar"
+        android:textColor="@color/sidebar_txt" >
+		<LinearLayout
+		    android:id="@+id/list_favorites_search_bar"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="5dp" >
+			<EditText
+		        android:id="@+id/list_favorites_search"
+		        android:layout_weight="2"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:descendantFocusability="beforeDescendants"
+	    		android:focusableInTouchMode="true"
+		        android:singleLine="true"
+		        android:hint="@string/search"
+		        android:ems="10" >
+	    	</EditText>
+	    	<Button
+	    	    android:layout_weight="1"
+		        android:layout_width="0dp"
+		        android:layout_height="wrap_content"
+		        android:text="@string/btn_search" />
+		</LinearLayout>
+		
+		<RelativeLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="25dp"
+		    android:focusable="true"
+		    android:clickable="true"
+		    android:background="@drawable/list_selector"
+		    android:onClick="loadHeatmap" >
+
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="left"
+		        android:text="@string/network_eduroam"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="right"
+		        android:text="@string/network_distance"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		</RelativeLayout>
+		
+		<RelativeLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:padding="25dp"
+		    android:focusable="true"
+		    android:clickable="true"
+		    android:background="@drawable/list_selector"
+		    android:onClick="loadHeatmap" >
+
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="left"
+		        android:text="@string/network_wifi"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="right"
+		        android:text="@string/network_distance"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+		</RelativeLayout>
+		
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_toRightOf="@+id/sidebar_favorites"
+        android:layout_width="@dimen/sidebar_border_width"
+        android:layout_height="fill_parent"
+        android:background="@color/sidebar_border" >
+    </LinearLayout>
+    
+    <LinearLayout 
+        android:baselineAligned="true"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true" >
+        <LinearLayout 
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:padding="10dp"
+		   android:focusable="true"
+		   android:clickable="true"
+		   android:background="@drawable/search_type_active" >
+           <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/action_all"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout 
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:padding="10dp"
+		   android:focusable="true"
+		   android:clickable="true"
+		   android:background="@drawable/search_type" >
+           <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/action_public"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout 
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:padding="10dp"
+		   android:focusable="true"
+		   android:clickable="true"
+		   android:background="@drawable/search_type" >
+           <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+		        android:text="@string/action_private"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
