Modified the Transition Animation between Screens.
- Did something to the Camera A - Z Screen (Not sure what though)

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,7 +20,7 @@
     
     <!--  No Animation Theme -->
     <style name="noAnimTheme" parent="android:Theme">
-		<item name="android:windowAnimationStyle">@null</item>
+		<!-- <item name="android:windowAnimationStyle">@null</item> -->
 	</style>
 
 </resources>
