--- a/res/layout/activity_camera_az.xml
+++ b/res/layout/activity_camera_az.xml
@@ -4,149 +4,159 @@
     android:layout_height="match_parent"
     android:textColor="@color/text"
     tools:context=".MapActivity" >
-    
+
     <LinearLayout
         android:id="@+id/sidebar_favorites"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
         android:background="@drawable/sidebar"
+        android:orientation="vertical"
         android:textColor="@color/sidebar_txt" >
-		<LinearLayout
-		    android:id="@+id/list_favorites_search_bar"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:padding="5dp" >
-			<EditText
-		        android:id="@+id/list_favorites_search"
-		        android:layout_weight="2"
-		        android:layout_width="0dp"
-		        android:layout_height="wrap_content"
-		        android:descendantFocusability="beforeDescendants"
-	    		android:focusableInTouchMode="true"
-		        android:singleLine="true"
-		        android:hint="@string/search"
-		        android:ems="10" >
-	    	</EditText>
-	    	<Button
-	    	    android:layout_weight="1"
-		        android:layout_width="0dp"
-		        android:layout_height="wrap_content"
-		        android:text="@string/btn_search" />
-		</LinearLayout>
-		
-		<RelativeLayout
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:padding="25dp"
-		    android:focusable="true"
-		    android:clickable="true"
-		    android:background="@drawable/list_selector"
-		    android:onClick="loadHeatmap" >
 
-		    <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="left"
-		        android:text="@string/network_eduroam"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
-		    <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="right"
-		        android:text="@string/network_distance"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
-		</RelativeLayout>
-		
-		<RelativeLayout
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:padding="25dp"
-		    android:focusable="true"
-		    android:clickable="true"
-		    android:background="@drawable/list_selector"
-		    android:onClick="loadHeatmap" >
+        <LinearLayout
+            android:id="@+id/list_favorites_search_bar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp" >
 
-		    <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="left"
-		        android:text="@string/network_wifi"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
-		    <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="right"
-		        android:text="@string/network_distance"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
-		</RelativeLayout>
-		
+            <EditText
+                android:id="@+id/list_favorites_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:descendantFocusability="beforeDescendants"
+                android:ems="10"
+                android:focusableInTouchMode="true"
+                android:hint="@string/search"
+                android:singleLine="true" >
+            </EditText>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/btn_search" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/list_selector"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="loadHeatmap"
+            android:padding="25dp" >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/network_eduroam"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="@string/network_distance"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/list_selector"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="loadHeatmap"
+            android:padding="25dp" >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/network_wifi"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="@string/network_distance"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
     </LinearLayout>
-    
+
     <LinearLayout
-        android:layout_toRightOf="@+id/sidebar_favorites"
         android:layout_width="@dimen/sidebar_border_width"
         android:layout_height="fill_parent"
+        android:layout_toRightOf="@+id/sidebar_favorites"
         android:background="@color/sidebar_border" >
     </LinearLayout>
-    
-    <LinearLayout 
-        android:baselineAligned="true"
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true" >
-        <LinearLayout 
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="1"
-           android:padding="10dp"
-		   android:focusable="true"
-		   android:clickable="true"
-		   android:background="@drawable/search_type_active" >
-           <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="center"
-		        android:text="@string/action_all"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
+        android:layout_alignParentBottom="true"
+        android:baselineAligned="true"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/search_type_active"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/action_all"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
-        <LinearLayout 
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="1"
-           android:padding="10dp"
-		   android:focusable="true"
-		   android:clickable="true"
-		   android:background="@drawable/search_type" >
-           <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="center"
-		        android:text="@string/action_public"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/search_type"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/action_public"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
-        <LinearLayout 
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="1"
-           android:padding="10dp"
-		   android:focusable="true"
-		   android:clickable="true"
-		   android:background="@drawable/search_type" >
-           <TextView
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="center"
-		        android:text="@string/action_private"
-		        android:textSize="15sp"
-		        android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/search_type"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/action_private"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
