--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:background="@color/background"
     android:textColor="@color/text"
     tools:context=".MapActivity" >
-    <ImageView
+    <!-- <ImageView
         android:contentDescription="@string/prototype"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -14,9 +14,9 @@
         android:gravity="top"
         android:scaleType="center"
         android:tileMode="disabled"
-        android:src="@drawable/prototype_map_blank" />
+        android:src="@drawable/prototype_map_blank" /> -->
 
-    <ImageView
+    <!-- <ImageView
         android:layout_width="40dp"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
@@ -28,6 +28,12 @@
         android:gravity="center"
         android:src="@drawable/prototype_pin"
         android:tileMode="disabled"
-        android:onClick="loadHeatmap" />
+        android:onClick="loadHeatmap" /> -->
+    
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment" />
 
 </RelativeLayout>
