--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -29,11 +29,23 @@
         android:src="@drawable/prototype_pin"
         android:tileMode="disabled"
         android:onClick="loadHeatmap" /> -->
+        
+    <TextView
+        android:id="@+id/tv_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     
     <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.MapFragment" />
+        android:layout_below="@id/tv_location"
+        class="com.google.android.gms.maps.SupportMapFragment" />
+    
+    <!-- <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment" /> -->
 
 </RelativeLayout>
