--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -30,7 +30,7 @@
         android:tileMode="disabled"
         android:onClick="loadHeatmap" /> -->
         
-    <TextView
+    <!-- <TextView
         android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -40,12 +40,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_location"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        class="com.google.android.gms.maps.SupportMapFragment" /> -->
     
-    <!-- <fragment
+    <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.MapFragment" /> -->
+        class="com.google.android.gms.maps.MapFragment" />
+    
+    <ImageView
+        android:contentDescription="@string/prototype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:gravity="top"
+        android:tileMode="disabled"
+        android:src="@drawable/btn_info"
+        android:onClick="loadInfo" />
 
 </RelativeLayout>
