--- a/res/layout/activity_map_az.xml
+++ b/res/layout/activity_map_az.xml
@@ -35,7 +35,7 @@
 		        android:text="@string/btn_search" />
 		</LinearLayout>
 		
-		<RelativeLayout
+		<!-- <RelativeLayout
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:padding="25dp"
@@ -58,9 +58,17 @@
 		        android:text="@string/network_distance"
 		        android:textSize="15sp"
 		        android:textStyle="bold" />
-		</RelativeLayout>
+		</RelativeLayout> -->
 		
-		<RelativeLayout
+		<ListView
+		    android:id="@+id/listview_az"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:divider="#b5b5b5"
+        	android:dividerHeight="1dp"
+		    android:listSelector="@drawable/list_selector" /> 
+		
+		<!-- <RelativeLayout
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:padding="25dp"
@@ -83,7 +91,7 @@
 		        android:text="@string/network_distance"
 		        android:textSize="15sp"
 		        android:textStyle="bold" />
-		</RelativeLayout>
+		</RelativeLayout> -->
 		
     </LinearLayout>
     
@@ -101,13 +109,15 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true" >
         <LinearLayout 
+           android:id="@+id/select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
 		   android:focusable="true"
 		   android:clickable="true"
-		   android:background="@drawable/search_type_active" >
+		   android:background="@drawable/search_type_active"
+		   android:onClick="filterAll" >
            <TextView
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
@@ -117,13 +127,15 @@
 		        android:textStyle="bold" />
         </LinearLayout>
         <LinearLayout 
+           android:id="@+id/select_public"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
 		   android:focusable="true"
 		   android:clickable="true"
-		   android:background="@drawable/search_type" >
+		   android:background="@drawable/search_type"
+		   android:onClick="filterPublic" >
            <TextView
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
@@ -133,13 +145,15 @@
 		        android:textStyle="bold" />
         </LinearLayout>
         <LinearLayout 
+           android:id="@+id/select_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
 		   android:focusable="true"
 		   android:clickable="true"
-		   android:background="@drawable/search_type" >
+		   android:background="@drawable/search_type"
+		   android:onClick="filterPrivate" >
            <TextView
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
