--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
+        android:id="@+id/action_home"
+        android:orderInCategory="0"
+        android:title="@string/action_home"
+        android:icon="@drawable/btn_home" />
+    <item
         android:id="@+id/action_az"
         android:orderInCategory="25"
         android:title="@string/action_az"
