--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -15,4 +15,17 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
     
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+    
+    <CheckBox android:id="@+id/checkbox_compass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/checkbox_compass"
+        android:onClick="onCompassCheck"/>
+    </RelativeLayout>
+    
 </FrameLayout>
