--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="background">#2E2E2E</color>
+    <color name="background">#E3E3E3</color>
+	<color name="title_text">#6188F2</color>
+	<color name="text">#000000</color>
+	<color name="line_ruler_colour">#394C80</color>
+	<color name="transparent">#00000000</color>
+	
+	<color name="sidebar_bg">#E3E3E3</color>
+	<color name="sidebar_border">#6188F2</color>
+	<color name="sidebar_txt">#000000</color>
+	
+	<color name="type_btn_bg">#FFFFFF</color>
+	
+	<color name="list_select_txt">#FFFFFF</color>
+	<color name="list_select_gradient_top">#5A92CE</color>
+	<color name="list_select_gradient_center">#396DA5</color>
+	<color name="list_select_gradient_end">#396594</color>
+    
+	<!-- <color name="background">#2E2E2E</color>
 	<color name="title_text">#9BA8C7</color>
 	<color name="text">#FFFFFF</color>
 	<color name="line_ruler_colour">#DEDEDE</color>
@@ -15,7 +32,7 @@
 	<color name="list_select_txt">#FFFFFF</color>
 	<color name="list_select_gradient_top">#5A92CE</color>
 	<color name="list_select_gradient_center">#396DA5</color>
-	<color name="list_select_gradient_end">#396594</color>
+	<color name="list_select_gradient_end">#396594</color> -->
 	
 	<string-array name="colours">
 	    <item>Blue</item>
