Modified the Design Branch to work on Old Phone.
- This branch was synced to the latest version of the master branch, and
was modified so that it works on the older phone. The idea being that I
can modify the code on the master branch, and then merge it with this
one to test it on the phone, and hopefully not have to mess around with
commenting out code every time I want to test it.

--- a/res/layout/activity_map_green.xml
+++ b/res/layout/activity_map_green.xml
@@ -17,12 +17,16 @@
         android:tileMode="disabled"
         android:src="@drawable/prototype_map_display_dots" />
     
-     <CheckBox android:id="@+id/checkbox_heatmap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="@string/checkbox_compass"
-        android:onClick="onHeatmapCheck"/>
+     <CheckBox
+         android:id="@+id/checkbox_heatmap"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentRight="true"
+         android:layout_marginBottom="10dp"
+         android:layout_marginRight="10dp"
+         android:background="@color/checkbox_select_background"
+         android:onClick="onHeatmapCheck"
+         android:text="@string/checkbox_compass" />
 
 </RelativeLayout>
