--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:background="@color/background"
     android:textColor="@color/text"
     tools:context=".MapActivity" >
-    <!-- <ImageView
+    <ImageView
         android:contentDescription="@string/prototype"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -14,7 +14,7 @@
         android:gravity="top"
         android:scaleType="center"
         android:tileMode="disabled"
-        android:src="@drawable/prototype_map_blank" /> -->
+        android:src="@drawable/prototype_map_blank" />
 
     <!-- <ImageView
         android:layout_width="40dp"
@@ -42,11 +42,11 @@
         android:layout_below="@id/tv_location"
         class="com.google.android.gms.maps.SupportMapFragment" /> -->
     
-    <fragment
+    <!-- <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.MapFragment" />
+        class="com.google.android.gms.maps.MapFragment" /> -->
     
     <ImageView
         android:contentDescription="@string/prototype"
