Removed Title Bar, Modified List Text Colour
- Added a section of XML to the App's Base Theme which should remove the
title bar only every Activity, or if not at least the Main Activity.
- Fixed some issues with the List Colour, which involved changing the
colour the text colour pointed to from @color/sidebar_txt to
@color/android:textColor="@color/list_select_txt.
- Added a "@color/list_select_hover_txt" option which sets the text
colour when a list item is pressed. For the time being it is the same
colour as @color/list_select_txt, white.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,11 +15,17 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:windowNoTitle">true</item>
     </style>
     
     <!--  No Animation Theme -->
     <style name="noAnimTheme" parent="android:Theme">
 		<!-- <item name="android:windowAnimationStyle">@null</item> -->
 	</style>
+	
+    <!-- No Title Bar Theme -->
+    <style name="noTitleTheme" parent="android:Theme">
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
