--- a/res/drawable/list_selector.xml
+++ b/res/drawable/list_selector.xml
@@ -3,15 +3,17 @@
     <item
         android:state_pressed="false"
         android:state_selected="false"
-        android:textColor="@color/sidebar_txt"
+        android:textColor="@color/list_select_txt"
         android:drawable="@drawable/list_bg" />
     
     <item 
         android:state_pressed="true"
+        android:textColor="@color/list_select_hover_txt"
         android:drawable="@drawable/list_bg_hover" />
  
     <item 
         android:state_selected="true"
      	android:state_pressed="false"
+     	android:textColor="@color/list_select_hover_txt"
         android:drawable="@drawable/list_bg_hover" />
 </selector>
