Added Custom List Adapter
- Completed the Custom List Adapter for the A - Z Lists. This should
format the text in a suitable way, using the list_networks.xml file as a
template for each list item.

--- a/res/layout/activity_map_az.xml
+++ b/res/layout/activity_map_az.xml
@@ -10,8 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:background="@drawable/sidebar"
-        android:textColor="@color/sidebar_txt" >
+        android:background="@drawable/sidebar" >
 		<LinearLayout
 		    android:id="@+id/list_favorites_search_bar"
 		    android:layout_width="fill_parent"
