--- a/res/layout/list_networks.xml
+++ b/res/layout/list_networks.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
+        android:padding="10dp"
         android:text="@string/network_eduroam"
         android:textSize="15sp"
         android:textStyle="bold" />
@@ -20,6 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:padding="10dp"
         android:text="@string/network_distance"
         android:textSize="15sp"
         android:textStyle="bold" />
