Removed Title Bar from all Activities
- The Title Bar was only being removed from Activities which did not use
the noAnim Theme. Now the Title Bar should be removed from all
Activities.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,6 +21,7 @@
     <!--  No Animation Theme -->
     <style name="noAnimTheme" parent="android:Theme">
 		<!-- <item name="android:windowAnimationStyle">@null</item> -->
+		<item name="android:windowNoTitle">true</item>
 	</style>
 	
     <!-- No Title Bar Theme -->
