Changed the Main Activity Line Colour
- Changed the @color/line_ruler_colour value to #CCCCCC, so that it
blends more into the background.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="background">#E3E3E3</color>
 	<color name="title_text">#6188F2</color>
 	<color name="text">#000000</color>
-	<color name="line_ruler_colour">#394C80</color>
+	<color name="line_ruler_colour">#CCCCCC</color>
 	<color name="transparent">#00000000</color>
 	
 	<color name="sidebar_bg">#E3E3E3</color>
