--- a/res/layout/activity_map_green.xml
+++ b/res/layout/activity_map_green.xml
@@ -24,5 +24,16 @@
         android:layout_alignParentBottom="true"
         android:text="@string/checkbox_compass"
         android:onClick="onHeatmapCheck"/>
+     
+     <ImageView
+        android:contentDescription="@string/prototype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:gravity="top"
+        android:tileMode="disabled"
+        android:src="@drawable/btn_info"
+        android:onClick="loadInfo" />
 
 </RelativeLayout>
