--- a/res/layout/activity_map_green.xml
+++ b/res/layout/activity_map_green.xml
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:text="@string/checkbox_compass"
+        android:text="@string/checkbox_map"
+        android:textColor="@color/text"
         android:onClick="onHeatmapCheck"/>
      
      <ImageView
