--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
 	        android:layout_centerHorizontal="true"
 	        android:text="@string/app_title"
 	        android:textColor="@color/title_text"
-	        android:textSize="30sp" />
+	        android:textSize="30sp"
+	        android:typeface="serif" />
     </RelativeLayout>
     
 	<LinearLayout
