--- a/res/layout/activity_compass.xml
+++ b/res/layout/activity_compass.xml
@@ -21,14 +21,14 @@
         android:contentDescription="@string/prototype"
         android:gravity="top"
         android:scaleType="center"
-        android:src="@drawable/prototype_arrow"
+        android:src="@drawable/compass1"
         android:tileMode="disabled" />
     
     <ImageView
         android:contentDescription="@string/prototype"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:gravity="top"
         android:tileMode="disabled"
